# sam

./: .pre-commit-config.yaml  AGENTS.md  README.md  main.py  pyproject.toml
src/: main.py
src/app/use_cases/: __init__.py  create_recipe.py  delete_recipe.py  get_recipe.py  list_recipes.py  update_recipes.py
src/cli/: streamlit_app.py
src/domain/entities/: __init__.py  recipe.py  user.py
src/domain/ports/: __init__.py  recipe_repository.py
src/infra/adapters/repos/: __init__.py  in_memory_recipe_repo.py
tests/: test_integration.py
